[tool.poetry]
name = "fastapi-import"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_import"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
requests = "^2.28.1"
sqlalchemy = "^1.4.44"
pandas = "^1.5.2"
httpx = "^0.23.1"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
